--- a/style.css
+++ b/style.css
@@ -1,17 +1,53 @@
-
+html, body {
+	height: 100%;
+}
 body{
+	margin: 0;
+	padding: 0;
 	background: url("img/bg.png");
 	font-family: 'PT Sans', serif;
 }
 h1{
 	color: #FF6C00;
 }
-h2{
-	color: #FF6C00;
+h2,h3{
+	color: gray;
 	font-size: 18px;
+	text-align: center;
+}
+h3{
+	font-size: 16px;
 }
 p{
 	font-size: 18px;
+	line-height: 28px;
+}
+.logo{
+	margin: 0 auto;
+	text-align: center;
+	height: 35%;
+}
+.navbar{
+    z-index: 100;
+    position: fixed;
+    width: 100%;
+	margin: 15px;
+	font-size: 22px;
+	width: 100%;
+    position: relative;
+    overflow: hidden;
+    height: 50px;
+}
+.navbar-fixed{
+	top: 0;
+    z-index: 100;
+    position: fixed;
+    width: 100%;
+    height: 50px;
+	margin: 0;
+	font-size: 22px;
+	padding: 10px;
+	background-color: rgba(255, 255, 255, 0.6);
 }
 .btn_nav{
 	margin: 20px;
@@ -26,11 +62,6 @@ p{
   	-moz-box-shadow: 0 5px 6px -6px #222;
   	box-shadow: 0 5px 6px -6px #222;
 }
-.footer{
-	bottom: 0;
-	padding: 60px;
-	text-align: center;
-}
 .light{
 	color: #FF6C00;
 	border-bottom: 4px solid currentColor;
@@ -43,10 +74,9 @@ p{
 	text-align: center;
 }
 .content{
-	margin: 0 10%;
+	margin: 0 10% 5% 10%;
 	padding: 10px;
 	overflow: auto;
-	display: block;
 	float: left;
 	background-color: rgba(255, 255, 255, 0.6);
 }
@@ -69,16 +99,6 @@ p{
   padding: 4%;
   box-sizing: border-box;
 }
-
-#logo{
-	margin: 30px auto;
-	text-align: center;
-}
-#navi{
-	margin: 15px;
-	font-size: 22px;
-}
-
 #avatar{
 	margin: 20px;
 	display: block;
@@ -94,35 +114,37 @@ p{
 	width: 20%;
 	float: right;
 }
-
+.footer{
+	margin: 3% auto;
+	text-align: center;
+	padding: 3%;
+}
 /*icons*/
 .fa {
-    padding: 20px;
+    padding: 2%;
     font-size: 30px;
-    width: 70px;
+    width: 3%;
+    margin: 1%;
     text-align: center;
     text-decoration: none;
-    border-radius: 50%;
-}
-.fa:hover {
-    opacity: 0.7;
-}
-.fa-facebook {
     border: white solid 1px;
     color: white;
 }
-.fa-github {
-    border: white solid 1px;
-    color: white;
+.fa-facebook:hover{
+    background-color: #3D549C;
 }
-.fa-linkedin {
-    border: white solid 1px;
-    color: white;
+.fa-github:hover{
+    background-color: #171515;
 }
-
+.fa-linkedin:hover{
+    background-color: #0096D6;
+}
+.row{
+	margin: 1%;
+}
 .project-type{
 	width: 12%;
-	padding: 1% 3%;
+	padding: 0% 3%;
 	float: left;
 }
 .slideshow-container {
@@ -135,13 +157,21 @@ p{
 	background-color: rgba(255, 255, 255, 0.6);
 }
 .project{
-	width: 40%;
-	height: 200px;
+	width: 45%;
+	height: 30%;
 	float: left;
 	position: relative;
 	margin: auto;
 	margin: 10px;
 	display: block;
-	padding: 5px 20px;
-	background-color: white;
+}
+#connected{
+	margin-top: 5%;
+	font-size: 22px;
+	font-family: 'Vollkorn SC';
+	color: white;
+}
+img.project-size{
+	width: 100%;
+	height: auto;
 }
