--- a/style.css
+++ b/style.css
@@ -5,39 +5,40 @@ body{
 	margin: 0;
 	padding: 0;
 	background: url("img/bg.png");
-	font-family: 'PT Sans', serif;
-}
+	font-family: 'PT Sans', serif;}
 h1{
 	color: #FF6C00;
-}
+	margin: 20px 5px 10px 5px;}
 h2,h3{
 	color: gray;
 	font-size: 18px;
-	text-align: center;
-}
+	text-align: center;}
 h3{
 	font-size: 16px;
 }
+h4{
+	margin: 0;
+	color: gray;
+	font-size: 18px;}
 p{
 	font-size: 18px;
-	line-height: 28px;
-}
-.logo{
+	line-height: 29px;}
+.header{
 	margin: 0 auto;
 	text-align: center;
-	height: 35%;
-}
+	/*height: 30%;*/}
+.logo{
+	width: 12%;
+	padding-top: 2%;}
 .navbar{
     z-index: 100;
     position: fixed;
     width: 100%;
-	margin: 15px;
+	margin: 20px;
 	font-size: 22px;
-	width: 100%;
     position: relative;
     overflow: hidden;
-    height: 50px;
-}
+    height: 20%;}
 .navbar-fixed{
 	top: 0;
     z-index: 100;
@@ -47,58 +48,37 @@ p{
 	margin: 0;
 	font-size: 22px;
 	padding: 10px;
-	background-color: rgba(255, 255, 255, 0.6);
-}
+	background-color: rgba(255, 255, 255, 0.6);}
 .btn_nav{
 	margin: 20px;
 	transition: background-color 3s ease;
-	text-decoration: none;
-	color: #715E5E;
-}
+	text-decoration: none;}
 .btn_nav:hover{
 	color: #FF6C00;
-	border-bottom: 4px solid currentColor;
-  	-webkit-box-shadow: 0 5px 6px -6px #222;
-  	-moz-box-shadow: 0 5px 6px -6px #222;
-  	box-shadow: 0 5px 6px -6px #222;
-}
+	border-bottom: 6px solid currentColor;}
 .light{
 	color: #FF6C00;
-	border-bottom: 4px solid currentColor;
-  	-webkit-box-shadow: 0 5px 6px -6px #222;
-  	-moz-box-shadow: 0 5px 6px -6px #222;
-  	box-shadow: 0 5px 6px -6px #222;
-}
+	border-bottom: 6px solid currentColor;}
 .center{
 	margin: auto;
-	text-align: center;
-}
+	text-align: center;}
 .content{
-	margin: 0 10% 5% 10%;
-	padding: 10px;
+	margin: 1% 6% 5% 6%;
+	padding: 2%;
 	overflow: auto;
 	float: left;
-	background-color: rgba(255, 255, 255, 0.6);
-}
-.display{
-	padding: 20px;
-}
+	background-color: rgba(255, 255, 255, 0.6);}
 .display-left{
-	font-size: 50px;
-	color: white;
 	float: left;
 }
 .display-right{
-	font-size: 50px;
-	color: white;
 	float: right;
 }
 .card-column {
   width: 50%;
   float: left;
   padding: 4%;
-  box-sizing: border-box;
-}
+  box-sizing: border-box;}
 #avatar{
 	margin: 20px;
 	display: block;
@@ -106,12 +86,12 @@ p{
 }
 #about_text{
 	margin: 0 20px;
-	width: 70%;
+	width: 60%;
 	display: block;
 	float: left;
 }
 #skill{
-	width: 20%;
+	width: 30%;
 	float: right;
 }
 .footer{
@@ -128,11 +108,9 @@ p{
     text-align: center;
     text-decoration: none;
     border: white solid 1px;
-    color: white;
-}
+    color: white;}
 .fa-facebook:hover{
-    background-color: #3D549C;
-}
+    background-color: #3D549C;}
 .fa-github:hover{
     background-color: #171515;
 }
@@ -140,7 +118,7 @@ p{
     background-color: #0096D6;
 }
 .row{
-	margin: 1%;
+	margin: 1% 4% 1% 1%;
 }
 .project-type{
 	width: 12%;
@@ -154,8 +132,7 @@ p{
 	margin: 1%;
 	display: block;
 	padding: 1%;
-	background-color: rgba(255, 255, 255, 0.6);
-}
+	background-color: rgba(255, 255, 255, 0.6);}
 .project{
 	width: 45%;
 	height: 30%;
@@ -163,15 +140,14 @@ p{
 	position: relative;
 	margin: auto;
 	margin: 10px;
-	display: block;
-}
+	display: block;}
+
 #connected{
 	margin-top: 5%;
 	font-size: 22px;
 	font-family: 'Vollkorn SC';
-	color: white;
-}
+	color: white;}
 img.project-size{
 	width: 100%;
-	height: auto;
-}
+	height: auto;}
+img#pdf{width: 7%;}
