--- a/style.css
+++ b/style.css
@@ -19,10 +19,13 @@ h3{
 h4{
 	margin: 0;
 	color: gray;
-	font-size: 18px;}
+	font-size: 20px;}
 p{
 	font-size: 18px;
 	line-height: 29px;}
+a{
+	text-decoration: none;
+}
 .header{
 	margin: 0 auto;
 	text-align: center;
@@ -33,32 +36,34 @@ p{
 .navbar{
     z-index: 100;
     position: fixed;
-    width: 100%;
 	margin: 20px;
 	font-size: 22px;
     position: relative;
     overflow: hidden;
+    text-align: center;
     height: 20%;}
 .navbar-fixed{
 	top: 0;
-    z-index: 100;
+    z-index: 99;
     position: fixed;
     width: 100%;
-    height: 50px;
+    height: 30px;
 	margin: 0;
 	font-size: 22px;
 	padding: 10px;
-	background-color: rgba(255, 255, 255, 0.6);}
+	background-color: rgba(255, 255, 255, 0.9);}
 .btn_nav{
-	margin: 20px;
-	transition: background-color 3s ease;
+	margin-left: 10px;
+	margin-right: 10px;
+	padding: 10px 25px;
+	transition: background-color 0.5s ease;
 	text-decoration: none;}
 .btn_nav:hover{
 	color: #FF6C00;
-	border-bottom: 6px solid currentColor;}
+	background-color: rgba(255, 255, 255, 0.6);
+}
 .light{
-	color: #FF6C00;
-	border-bottom: 6px solid currentColor;}
+	color: #FF6C00;}
 .center{
 	margin: auto;
 	text-align: center;}
@@ -74,11 +79,6 @@ p{
 .display-right{
 	float: right;
 }
-.card-column {
-  width: 50%;
-  float: left;
-  padding: 4%;
-  box-sizing: border-box;}
 #avatar{
 	margin: 20px;
 	display: block;
@@ -121,7 +121,7 @@ p{
 	margin: 1% 4% 1% 1%;
 }
 .project-type{
-	width: 12%;
+	width: 10%;
 	padding: 0% 3%;
 	float: left;
 }
@@ -131,23 +131,75 @@ p{
 	position: relative;
 	margin: 1%;
 	display: block;
-	padding: 1%;
+	padding: 2%;
 	background-color: rgba(255, 255, 255, 0.6);}
 .project{
-	width: 45%;
-	height: 30%;
+	cursor: pointer;
+	width: 38%;
 	float: left;
 	position: relative;
-	margin: auto;
+	margin: 0 3% auto;
+	padding: 1%;
+	display: block;
+	transition: all .2s ease-in-out;}
+.project:hover{
+	background-color: white;
+	opacity: 0.7;
+	color: white;
+	transform: scale(1.05);}
+.project-content{
+	display: none;
+	vertical-align: top;
+	z-index: 100;
+	background-color: rgba(255, 255, 255, 0.98);;
+	border-width: 5%;
+	border-style: solid;
+	border-color: gray;
+	height: 96%;
+	width: 92%;
+	margin: 1% 4%;
+	position: fixed;
+	top: 0;
+	left: 0;
+}
+.close{
+	cursor: pointer;
+	z-index: 101;
+	width: 50px;
+	height: 50px;
+	font-size: 50px;
+	line-height: 50px;
+	vertical-align: middle;
+	text-align: center;
+	float: right;
+	top: 0;
+	right: 0;
+	color: white;
+	background-color: gray;
+}
+#video_famifilm{
+	padding: 3%;
+}
+.banner{
 	margin: 10px;
-	display: block;}
+	text-align: center;
+}
+.column{
+	width: auto;
+	float: left;
+	margin: 20px;
+}
+.title{
+	font-size: 20px;
+}
 
 #connected{
 	margin-top: 5%;
 	font-size: 22px;
 	font-family: 'Vollkorn SC';
 	color: white;}
+
 img.project-size{
 	width: 100%;
 	height: auto;}
-img#pdf{width: 7%;}
+img#pdf{width: 10%;}
