--- a/style.css
+++ b/style.css
@@ -110,9 +110,10 @@ a{
 }
 /*icons*/
 .fa {
-    padding: 1%;
-    line-height: 50px;
+    padding: 10px;
     width: 55px;
+    height: 50px;
+	vertical-align: middle;
     margin: 1%;
     text-align: center;
     text-decoration: none;
