--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 	margin: 0;
 	padding: 0;
 	background: url("img/bg.png");
-	font-family: 'PT Sans', serif;}
+	font-family: 'Chivo-Regular';}
 h1{
 	color: #FF6C00;
 	margin: 20px 5px 10px 5px;}
@@ -25,7 +25,7 @@ p{
 	font-size: 18px;
 	line-height: 29px;}
 a{
-	color: white;
+	color: gray;
 	text-decoration: none;
 }
 .header{
@@ -48,7 +48,7 @@ a{
     z-index: 99;
     position: fixed;
     width: 100%;
-    height: 43px;
+    height: 45px;
 	margin: 0;
 	font-size: 22px;
 	padding: 10px;
@@ -384,7 +384,6 @@ div.gallery img {
 		display: table;
 		transition: background-color 0.5s ease;
 		text-decoration: none;
-		font-family: 'Vollkorn SC';
 	}
 	.drawer_btn_nav:hover{
 		color: #FF6C00;
