--- a/style.css
+++ b/style.css
@@ -1,26 +1,36 @@
+@charset "UTF-8";
 html, body {
 	height: 100%;
 	font-size: 100%;
 }
+article, aside, footer, header, main, nav, section {
+  display: block;
+}
 body{
 	margin: 0;
 	padding: 0;
-	background: url("img/bg.png");
+	/*background: url("img/bg.png");*/
 	font-family: 'Chivo-Regular';}
 h1{
 	color: #FF6C00;
 	margin: 20px 5px 10px 5px;}
-h2,h3{
-	color: gray;
+h2{
+	color: #FF6C00;
 	font-size: 18px;
 	text-align: center;}
 h3{
+	color: gray;
 	font-size: 16px;
+	text-align: center;
 }
 h4{
 	margin: 0;
-	color: gray;
+	color: #FF6C00;
 	font-size: 20px;}
+h5{
+	margin: 1%;
+	color: gray;
+	font-size: 28px;}
 p{
 	font-size: 18px;
 	line-height: 29px;}
@@ -28,58 +38,67 @@ a{
 	color: gray;
 	text-decoration: none;
 }
-.header{
-	margin: 0 auto;
-	text-align: center;
-	/*height: 30%;*/}
-.logo{
-	width: 12%;
-	padding-top: 2%;}
-.navbar{
-    z-index: 100;
-	margin: 20px;
-	font-size: 22px;
-    position: relative;
-    overflow: hidden;
+header{
+    padding: 1%;
+    clear: left;
     text-align: center;
-    height: 20%;}
+}
+footer{
+    padding: 3%;
+    clear: left;
+    text-align: center;
+	font-size: 8px;
+	font-size: 22px;
+	font-family: 'Vollkorn SC';
+	color: gray;
+}
+.copyright{
+	font-size: 15px;
+}
+article{
+	padding: 0 6%;
+}
+nav{
+	text-align: center;
+	padding-bottom: 3%;
+}
+.logo{
+	width: 10%;
+	margin: 1%;
+}
 .navbar-fixed{
 	top: 0;
     z-index: 99;
     position: fixed;
     width: 100%;
-    height: 45px;
+    height: 50px;
 	margin: 0;
 	font-size: 22px;
 	padding: 10px;
-	background-color: rgba(255, 255, 255, 0.9);}
+	background-color: white;
+}
 .drawer{
 	display: none;
 }
 .btn_nav{
+	font-size: 20px;
 	margin-left: 10px;
 	margin-right: 10px;
 	padding: 10px 25px;
 	transition: background-color 0.5s ease;
 	text-decoration: none;}
 .btn_nav:hover{
-	color: #FF6C00;
-	background-color: rgba(255, 255, 255, 0.6);
+	color: white;
+	background-color: #FF6C00;;
 }
 .a_nav:hover{
-	color: #FF6C00;
+	color: white;
 }
 .light{
 	color: #FF6C00;}
 .center{
 	margin: auto;
 	text-align: center;}
-.content{
-	margin: 1% 6% 5% 6%;
-	padding: 3%;
-	overflow: auto;
-	float: left;
-	background-color: rgba(255, 255, 255, 0.6);}
 .display-left{
 	float: left;
 }
@@ -87,7 +106,9 @@ a{
 	float: right;
 }
 #avatar{
-	margin: 20px;
+	width: 30%;
+	/*margin: 2%;*/
+	padding: 2%;
 	display: block;
 	float: left;
 }
@@ -100,12 +121,8 @@ a{
 #skill{
 	display: inline;
 	width: 30%;
-	float: right;
-}
-.footer{
-	margin: 3% auto;
-	text-align: center;
-	padding: 3%;
+	margin: 0 20px;
+	float: left;
 }
 /*icons*/
 .fa {
@@ -116,57 +133,70 @@ a{
     margin: 1%;
     text-align: center;
     text-decoration: none;
-    border: white solid 1px;
-    color: white;}
+    border: gray solid 2px;
+    color: gray;}
 .fa-facebook:hover{
+	color: white;
     background-color: #3D549C;}
 .fa-github:hover{
+	color: white;
     background-color: #171515;
 }
 .fa-linkedin:hover{
+	color: white;
     background-color: #0096D6;
 }
 .row{
-	margin: 1% 4% 1% 1%;
-}
-.project-type{
-	width: 15%;
-	padding: 0% 3%;
+	width: 100%;
+	margin: 1% auto;
 	float: left;
 }
-.slideshow-container {
-	max-width: 90%;
-	overflow: auto;
-	position: relative;
-	margin: 1%;
-	display: block;
-	padding: 2%;
-	background-color: rgba(255, 255, 255, 0.6);}
 .project{
 	cursor: pointer;
-	width: 38%;
+	width: 48%;
+	display: table;
+	margin: 0 auto;
 	float: left;
 	position: relative;
-	margin: 0 3% auto;
+	margin: 0 1% auto;
 	padding: 1%;
-	display: block;
-	transition: all .2s ease-in-out;}
+	background-color: rgba(248, 157, 70, 0.2);
+	border-radius: 8px;
+	transition: all .2s ease-in-out;
+}
+.project-small{
+	cursor: pointer;
+	width: 31.3%;
+	display: table;
+	margin: 0 auto;
+	float: left;
+	position: relative;
+	margin: 0 1% auto;
+	padding: 1%;
+	background-color: rgba(248, 157, 70, 0.2);
+	border-radius: 8px;
+	transition: all .2s ease-in-out;
+}
 .project:hover{
 	background-color: white;
 	opacity: 0.7;
 	color: white;
 	transform: scale(1.05);}
+.project-small:hover{
+	background-color: white;
+	opacity: 0.7;
+	color: white;
+	transform: scale(1.05);
+}
 .project-content{
 	display: none;
 	vertical-align: top;
 	z-index: 100;
-	background-color: rgba(255, 255, 255, 0.98);;
-	border-width: 5%;
-	border-style: solid;
-	border-color: gray;
+	background-color: rgba(255, 255, 255, 0.98);
 	height: 96%;
-	width: 88%;
-	margin: 1% 4%;
+	width: 90%;
+	padding: 0 5% 3% 5%;
+	margin: 1% 5% auto;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -176,11 +206,10 @@ a{
 	position: absolute;
 	cursor: pointer;
 	z-index: 101;
-	width: 50px;
-	height: 50px;
+	width: 61px;
+	height: 61px;
 	font-size: 50px;
 	line-height: 50px;
-	vertical-align: middle;
 	text-align: center;
 	float: right;
 	top: 0;
@@ -195,19 +224,37 @@ a{
 	width: 100%;
 	margin: 0 auto;
 	padding: 2% 0;
-	text-align: center;
 	float: left;
+}
+.banner-img-big{
+	float: left;
+	display: block;
+	width: 98%;
+	padding: 1%;
 }
 .banner-img{
 	float: left;
 	display: block;
-	width: 48%;
+	width: 46%;
 	padding: 1%;
 }
-.column{
-	width: auto;
+.banner-img-small{
 	float: left;
-	margin: 1% 3%;
+	display: block;
+	width: 30%;
+	padding: 1%;
+}
+.prow{
+	width: 38%;
+	float: left;
+	text-align: left;
+	margin: 1%;	
+}
+.pcol{
+	width: 47%;
+	float: left;
+	text-align: left;
+	margin: 1%;
 }
 .title{
 	font-size: 20px;
@@ -215,11 +262,6 @@ a{
 .detail{
 	display: none;
 }
-#connected{
-	margin-top: 5%;
-	font-size: 22px;
-	font-family: 'Vollkorn SC';
-	color: white;}
 #video_famifilm{
 	display: none;
 }
@@ -230,6 +272,7 @@ a{
 	position: fixed;
 	top: 0;
 	z-index: 99;
+	background-color:rgba(0, 0, 0, 0.8); 
 }
 img.project-size{
 	width: 100%;
@@ -245,11 +288,12 @@ video{
 }
 
 div.gallery {
+	background-color: rgba(248, 157, 70, 0.2);
     border: 1px solid #ccc;
 }
 
 div.gallery:hover {
-    border: 2px solid #777;
+    border: 3px solid rgba(248, 157, 70, 0.2);
 }
 
 div.gallery img {
@@ -262,7 +306,7 @@ div.gallery img {
 }
 
 .responsive {
-    padding: 2px 6px;
+    padding: 2px 10px;
     float: left;
     display: inline-block;
     width: 24.99999%;
@@ -283,15 +327,10 @@ div.gallery img {
 	right: 6%;
 	top: 6%; 
 }
-.project-type{
-	width: 30%;
-	padding: 0% 3%;
-	float: left;
-}
 
 /* Icon 3 */
 .nav-icon{
-  width: 60px;
+  width: 35px;
   height: 45px;
   position: absolute;
   top: 4%;
@@ -310,9 +349,9 @@ div.gallery img {
 .nav-icon span{
   display: block;
   position: absolute;
-  height: 9px;
+  height: 4px;
   width: 100%;
-  background: white;
+  background: gray;
   border-radius: 9px;
   opacity: 1;
   left: 0;
@@ -332,11 +371,11 @@ div.gallery img {
 }
 
 .nav-icon span:nth-child(2),.nav-icon span:nth-child(3) {
-  top: 18px;
+  top: 10px;
 }
 
 .nav-icon span:nth-child(4) {
-  top: 36px;
+  top: 20px;
 }
 
 .nav-icon.open span:nth-child(1) {
@@ -364,14 +403,14 @@ div.gallery img {
   width: 0%;
   left: 50%;
 }
-.navbar{
+nav{
 	display: none;
 }
 	.drawer{
 		margin: 0% auto;
 		width: 100%;
 		height: 100%;
-		background-color: rgba(180, 180, 180, 0.98);
+		background-color: white;
 		color: white;
 	}
 
@@ -422,8 +461,17 @@ div.gallery img {
 	width: 90%;
 	float: left;
 	position: relative;
-	margin: 0 3% auto;
-	padding: 1%;
+	margin: 1.5% auto;
+	padding: 3%;
+	display: block;
+	transition: all .2s ease-in-out;}
+	.project-small{
+	cursor: pointer;
+	width: 90%;
+	float: left;
+	position: relative;
+	margin: 1.5% auto;
+	padding: 3%;
 	display: block;
 	transition: all .2s ease-in-out;}
     .responsive {
