--- a/style.css
+++ b/style.css
@@ -46,6 +46,15 @@ header{
     padding: 1%;
     clear: left;
     text-align: center;
+    background-color: #FFDEAD;
+}
+nav{
+	text-align: center;
+	padding-bottom: 2%;
+    background-color: #FFDEAD;
+}
+article{
+	padding: 2% 6%;
 }
 footer{
     padding: 3%;
@@ -58,13 +67,7 @@ footer{
 .copyright{
 	font-size: 14px;
 }
-article{
-	padding: 1% 6%;
-}
-nav{
-	text-align: center;
-	padding-bottom: 3%;
-}
+
 .logo{
 	width: 10%;
 	margin: 1%;
@@ -74,11 +77,12 @@ nav{
     z-index: 99;
     position: fixed;
     width: 100%;
-    height: 50px;
+    height: 35px;
 	margin: 0;
 	font-size: 22px;
 	padding: 10px;
-	background-color: white;
+	vertical-align: middle;
+	background-color: background-color: #FFDEAD;
 }
 .drawer{
 	display: none;
@@ -109,8 +113,8 @@ nav{
 }
 #avatar{
 	width: 30%;
-	margin: 3%;
-	padding: 2%;
+	margin: 1%;
+	padding: 3%;
 	display: block;
 	float: left;
 }
@@ -130,8 +134,8 @@ nav{
 .fa {}
 .foot {
     padding: 10px;
-    width: 55px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
 	vertical-align: middle;
     margin: 1%;
     text-align: center;
@@ -156,7 +160,7 @@ nav{
     background-color: #0096D6;
 }
 .row{
-	width: 100%;
+	width: 80%;
 	margin: 1% auto;
 	float: left;
 	padding: 0 10%;
@@ -169,7 +173,6 @@ nav{
 	float: left;
 	position: relative;
 	margin: 0 1% auto;
-	padding: 1%;
 	background-color: rgba(248, 157, 70, 0.2);
 	transition: all .2s ease-in-out;
 }
@@ -191,7 +194,7 @@ nav{
 	background-color: rgba(255, 255, 255, 0.98);
 	height: 96%;
 	width: 90%;
-	padding: 3% 3% 3% 3%;
+	padding: 0% 3% 3% 3%;
 	margin: 1% 5% auto;
 	position: fixed;
 	top: 0;
@@ -285,11 +288,10 @@ nav{
 	background-color:rgba(0, 0, 0, 0.8); 
 }
 img.project-size{
-	width: 100%;
+	width: 90%;
 	height: auto;
 	padding: 5% 5% 0 5%;
 }
-img#pdf{width: 10%;}
 
 video{
 	margin: 0 15% auto;
@@ -300,42 +302,92 @@ video{
 	display: none;
 }
 
-div.gallery {
-	background-color: rgba(248, 157, 70, 0.2);
-    border: 1px solid #ccc;
+/******************************************************/
+/******************************************************/
+/******************************************************/
+#portfolio {  
+    margin: 2% 6%;
+    -webkit-column-count: 3; 
+    -moz-column-count: 3;
+    column-count: 3;
+    -webkit-column-gap: 2%;
+    -moz-column-gap: 2%;
+    column-gap: 2%;
+    -webkit-column-width: 33.33333333333333%;
+    -moz-column-width: 33.33333333333333%;
+    column-width: 33.33333333333333%;
+}
+.tile { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition: all 350ms ease;
+    transition: all 350ms ease;
+}
+.tile:hover { 
+	
 }
 
-div.gallery:hover {
-    border: 3px solid rgba(248, 157, 70, 0.2);
+.scale-anm {
+  transform: scale(1);
 }
 
-div.gallery img {
+
+.tile img {
+    max-width: 100%;
     width: 100%;
     height: auto;
+    margin-bottom: 1rem;
+  
 }
-
-* {
-    box-sizing: border-box;
-}
-
-.responsive {
-    padding: 2px 10px;
-    float: left;
+.btn {
+    font-size: 1rem;
+    text-decoration: none;
+    cursor: pointer;
     display: inline-block;
-    width: 24.99999%;
-    position: relative;
+    line-height: normal;
+    padding: .5rem 1rem;
+    margin: .25rem 0;
+    height: auto;
+    border: 1px solid;
+    vertical-align: middle;
+    -webkit-appearance: none;
+    color: gray;
+    background-color: 
 }
 
+.btn:hover {
+  text-decoration: none;
+  color: white;
+  background-color: #FF6C00;
+}
+
+.btn:focus {
+  outline: none;
+  border-color: var(--darken-2);
+  box-shadow: 0 0 0 3px var(--darken-3);
+}
+
+::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
 
 /******************************************************/
 /******************************************************/
 /******************************************************/
 @media screen and (max-width: 600px) {
 header{
-    height: 15%;
-    padding: 3%;
+    padding: 1%;
     clear: left;
     text-align: center;
+	height: 120px;
+}
+nav{
+	text-align: center;
+	padding-bottom: 2%;
+    background-color: red;
+	height: 50%;
+	display: none;    
 }
 footer{
     padding: 10%;
@@ -346,7 +398,7 @@ footer{
 	color: gray;
 }
 #avatar{
-	width: 100%;
+	width: 60%;
 	padding: 10% 20%;
 }
 .drawer-toggle{ 
@@ -448,8 +500,17 @@ footer{
   width: 0%;
   left: 50%;
 }
-nav{
-	display: none;
+#portfolio {  
+    margin: 2% 0;
+    -webkit-column-count: 2; 
+    -moz-column-count: 2;
+    column-count: 2;
+    -webkit-column-gap: 2%;
+    -moz-column-gap: 2%;
+    column-gap: 2%;
+    -webkit-column-width: 33.33333333333333%;
+    -moz-column-width: 33.33333333333333%;
+    column-width: 33.33333333333333%;
 }
 	.drawer{
 		margin: 0% auto;
@@ -473,13 +534,6 @@ nav{
 		color: #FF6C00;
 		background-color: rgba(255, 255, 255, 0.6);
 	}
-
-	.header{
-		width: 100%;
-		height: 100px;
-		margin: 0 auto;
-		text-align: center;
-		line-height: middle;}
 	.logo{
 		width: 100px;
 		float: left;
@@ -548,6 +602,9 @@ nav{
 		float: left;
 		text-align: left;
 		margin: 1%;
+	}
+	.toolbar{
+		top:
 	}
 }
 
