--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ article, aside, footer, header, main, nav, section {
   display: block;
 }
 body{
+	width: 100%;
 	margin: 0;
 	padding: 0;
 	font-family: 'Open Sans';
@@ -380,7 +381,7 @@ header{
     padding: 1%;
     clear: left;
     text-align: center;
-	height: 70px;
+	height: 45px;
 	width: 100%;
 	position: fixed;
 	z-index: 98;
@@ -394,7 +395,7 @@ nav{
 }
 article{
 	position: relative;
-	padding: 85px 6%;
+	padding: 65px 6%;
 }
 footer{
     padding: 10%;
@@ -433,9 +434,10 @@ footer{
 	background-color: gray;
 }
 .logo{
-	width: 60px;
+	width: 43px;
 	float: left;
-	left: 6%;
+	left: 2%;
+	top: 1%;
 	position: absolute;
 }
 /* Icon 3 */
@@ -443,8 +445,8 @@ footer{
   width: 35px;
   height: 45px;
   position: fixed;
-  top: 4%;
-  right: 6%;
+  top: 2%;
+  right: 3%;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
@@ -554,13 +556,9 @@ footer{
 	width: 96%;
 	padding: 2%;
 }
-#about_text{
-	margin: 0 20px;
-	width: 90%;
-	float: left;
-}
-#skill{
-	width: 90%;
+#about_text,#skill{
+	margin: 1.5%;
+	width: 97%;
 	float: left;
 }
 .project{
