--- a/style.css
+++ b/style.css
@@ -16,20 +16,21 @@ body{
 h1{
 	font-family: 'Vollkorn SC';
 	font-size: 30px;}
+/*the project title*/
 h2{
-	color: gray;
-	font-size: 18px;
-	text-align: center;}
+	font-size: 15px;
+	text-align: center;
+	padding: 0 5%;
+	margin: 2%}
 h3{
 	color: gray;
 	font-size: 16px;
-	text-align: center;
-}
-/*h in projects*/
+	text-align: center;}
+/*hs in project-content*/
 h4{
 	margin: 5px 0;
 	color: #FF6C00;
-	font-size: 19px;}
+	font-size: 18px;}
 h5{
 	margin: 1%;
 	color: gray;
@@ -42,7 +43,7 @@ a{
 	text-decoration: none;
 }
 b{
-	color: #B1643B;
+	font-style: bold;
 }
 header{
 	position: fixed;
@@ -59,7 +60,7 @@ nav{
     background-color: #FFDEAD;
 }
 article{
-	padding: 1%;
+
 }
 footer{
     padding: 8%;
@@ -69,9 +70,9 @@ footer{
 	font-family: 'Vollkorn SC';
 	color: gray;
 }
-.introduce{
+.intro{
 	text-align: center;
-	padding: 14% 0 8% 0;
+	padding: 14% 5% 8% 5%;
 }
 .copyright{
 	font-size: 14px;
@@ -146,7 +147,6 @@ footer{
 	vertical-align: middle;
     margin: 1%;
     text-align: center;
-    border: gray solid 2px;
     color: gray;
 }
 .icon{
@@ -154,19 +154,39 @@ footer{
     text-decoration: none;
     color: #FF6C00;
 }
+.fa-facebook{
+	border-style: solid;
+	border-width: 2px;
+	border-color: grey;
+	color: grey;
+	background-color: white;
+}
 
+.fa-github{
+	border-style: solid;
+	border-width: 2px;
+	border-color: grey;
+	color: grey;
+	background-color: white;
+}
+.fa-linkedin{
+	border-style: solid;
+	border-width: 2px;
+	border-color: grey;
+	color: grey;
+	background-color: white;
+}
 .fa-facebook:hover{
 	color: white;
     background-color: #4360B5;
 }
-
 .fa-github:hover{
 	color: white;
     background-color: #171515;
 }
 
 .fa-linkedin:hover{
-	color: white;
+    color: white;
     background-color: #0096D6;
 }
 .row{
@@ -179,7 +199,6 @@ footer{
 	cursor: pointer;
 	width: 48%;
 	display: table;
-	margin: 0 auto;
 	float: left;
 	position: relative;
 	margin: 0 1% auto;
@@ -189,12 +208,10 @@ footer{
 .project:hover{
 	background-color: white;
 	opacity: 0.7;
-	color: white;
 	transform: scale(1.05);}
 .project-small:hover{
 	background-color: white;
 	opacity: 0.7;
-	color: white;
 	transform: scale(1.05);
 }
 .project-content{
@@ -202,8 +219,8 @@ footer{
 	vertical-align: top;
 	z-index: 100;
 	background-color: rgba(255, 255, 255, 0.98);
-	height: 96%;
-	padding: 0% 3% 3% 3%;
+	height: 85%;
+	padding: 3% 12%;
 	margin: 1% 5% auto;
 	position: fixed;
 	top: 0;
@@ -259,14 +276,13 @@ footer{
 	padding: 0.5%;
 }
 .prow {
-    width: 90%;
+    width: 100%;
     float: left;
     text-align: left;
     margin: 0.5%;
-    padding: 0 5%;
 }
 .pcol{
-	width: 20%;
+	width: 30%;
 	float: left;
 	text-align: left;
 	margin: 0.5%;
@@ -299,7 +315,7 @@ footer{
 img.project-size{
 	width: 90%;
 	height: auto;
-	padding: 5% 5% 0 5%;
+	padding: 5% 5% 0% 5%;
 }
 
 video{
@@ -309,6 +325,9 @@ video{
 }
 .drawer{
 	display: none;
+}
+.a-link{
+	text-decoration: underline;
 }
 
 /******************************************************/
@@ -381,6 +400,7 @@ video{
   padding: 0;
 }
 
+/*mobile*/
 /******************************************************/
 /******************************************************/
 /******************************************************/
@@ -403,7 +423,7 @@ nav{
 }
 article{
 	position: relative;
-	padding: 65px 6%;
+	padding: 2% 6%;
 }
 footer{
     padding: 5%;
@@ -412,6 +432,10 @@ footer{
 	font-size: 19px;
 	font-family: 'Vollkorn SC';
 	color: gray;
+}
+.intro{
+	text-align: center;
+	padding: 20% 5% 0% 5%;
 }
 #avatar{
 	width: 60%;
@@ -535,6 +559,9 @@ footer{
     -moz-column-width: 33.33333333333333%;
     column-width: 33.33333333333333%;
 }
+.a_nav{
+	display: none;
+}
 .drawer{
 	padding: 40px;
 	margin: 0 auto;
@@ -593,6 +620,19 @@ footer{
 	padding: 1%;
 	background-color: rgba(248, 157, 70, 0.2);
 	transition: all .2s ease-in-out;
+}
+.project-content{
+	display: none;
+	vertical-align: top;
+	z-index: 100;
+	background-color: rgba(255, 255, 255, 0.98);
+	height: 92%;
+	padding: 5%;
+	margin: 2% 2% auto;
+	position: fixed;
+	top: 0;
+	left: 0;
+	overflow: scroll;
 }
 .row{
 	width: 100%;
