--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ body{
 	font-style:none;}
 h1{
 	font-family: 'Vollkorn SC';
-	font-size: 30px;}
+	font-size: 35px;
+	text-shadow: 2px 2px gray;}
 /*the project title*/
 h2{
 	font-size: 15px;
@@ -36,7 +37,7 @@ h5{
 	color: gray;
 	font-size: 28px;}
 p{
-	font-size: 17px;
+	font-size: 18px;
 	line-height: 29px;}
 a{
 	color: gray;
@@ -47,10 +48,10 @@ b{
 }
 header{
 	position: fixed;
-	width: 98%;
-	height: 5.5%;
+	width: 80%;
+	height: 7%;
 	z-index: 99;
-    padding: 1%;
+    padding: 1% 10%;
     clear: left;
     background-color: #FFDEAD;
 }
@@ -60,7 +61,6 @@ nav{
     background-color: #FFDEAD;
 }
 article{
-
 }
 footer{
     padding: 8%;
@@ -70,9 +70,42 @@ footer{
 	font-family: 'Vollkorn SC';
 	color: gray;
 }
+.wrapper{
+	padding: 35px 0;
+}
+.parallax-index-1{ 
+    /* The image used */
+    background-image: url("img/parallax_index_1.jpg");
+	opacity: 0.8;
+    /* Full height */
+    height: 100%; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.parallax-art-1{ 
+    /* The image used */
+    background-image: url("img/parallax_art_1.jpg");
+	opacity: 0.8;
+    /* Full height */
+    height: 70%; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 .intro{
 	text-align: center;
-	padding: 14% 5% 8% 5%;
+	padding: 20% 5% 8% 5%;
+	color: black;
+}
+.index{
+	padding: 3%;
 }
 .artwork{
 	text-align: center;
@@ -83,8 +116,7 @@ footer{
 }
 
 .logo{
-	width: 90px;
-	padding: 0 2%;
+	height: 100%;
 }
 .navbar-fixed{
 	top: 0;
@@ -100,23 +132,27 @@ footer{
 }
 .drawer{
 	display: none;
+	z-index: 99;
 }
 .btn_nav{
-	font-size: 16px;
+	font-size: 18px;
+	line-height: 100%;
 	margin: 4px;
-	padding: 6px 15px;
+	padding: 15px 15px;
 	float: right;
 	transition: background-color 0.5s ease;
 	text-decoration: none;}
 .btn_nav:hover{
 	color: white;
-	background-color: #FF6C00;;
+	background-color: #FF6C00;
+/*	box-shadow: 4px 4px gray;*/
 }
 .a_nav:hover{
 	color: white;
 }
 .light{
-	color: #FF6C00;}
+	color: #FF6C00;
+}
 .center{
 	margin: auto;
 	text-align: center;}
@@ -160,27 +196,27 @@ footer{
     text-decoration: none;
     color: #FF6C00;
 }
+.fa-chevron-down{
+	color: #FF6C00;
+}
+
 .fa-facebook{
 	border-style: solid;
 	border-width: 2px;
-	border-color: grey;
-	color: grey;
-	background-color: white;
+	border-color: gray;
+	color: gray;
 }
-
 .fa-github{
 	border-style: solid;
 	border-width: 2px;
-	border-color: grey;
-	color: grey;
-	background-color: white;
+	border-color: gray;
+	color: gray;
 }
 .fa-linkedin{
 	border-style: solid;
 	border-width: 2px;
-	border-color: grey;
-	color: grey;
-	background-color: white;
+	border-color: gray;
+	color: gray;
 }
 .fa-facebook:hover{
 	color: white;
@@ -236,7 +272,7 @@ footer{
 .close{
 	position: absolute;
 	cursor: pointer;
-	z-index: 101;
+	z-index: 110;
 	width: 61px;
 	height: 61px;
 	font-size: 50px;
@@ -365,7 +401,6 @@ video{
   transform: scale(1);
 }
 
-
 .tile img {
     max-width: 100%;
     width: 100%;
@@ -380,13 +415,12 @@ video{
     display: inline-block;
     line-height: normal;
     padding: .5rem 1rem;
-    margin: .25rem 0;
+    margin: .25rem;
     height: auto;
-    border: 1px solid;
+    border: 0px;
     vertical-align: middle;
     -webkit-appearance: none;
-    color: gray;
-    background-color:white; 
+    color: black;
 }
 
 .btn:hover {
@@ -416,7 +450,7 @@ header{
     clear: left;
     text-align: center;
 	height: 5.5%;
-	width: 100%;
+	width: 96%;
 	position: fixed;
 	z-index: 98;
 }
@@ -430,6 +464,7 @@ nav{
 article{
 	position: relative;
 	padding: 2% 6%;
+	top: 11%;
 }
 footer{
     padding: 5%;
@@ -445,7 +480,7 @@ footer{
 }
 .artwork{
 	text-align: center;
-	padding: 20% 5% 0% 5%;
+	padding: 0% 5%;
 }
 #avatar{
 	width: 60%;
@@ -463,7 +498,7 @@ footer{
 .close{
 	position: fixed;
 	cursor: pointer;
-	z-index: 101;
+	z-index: 110;
 	width: 45px;
 	height: 45px;
 	font-size: 45px;
@@ -476,7 +511,7 @@ footer{
 	background-color: gray;
 }
 .logo{
-	/*width: 43px;*/
+	height: 97%;
 	float: left;
 	left: 2%;
 	top: 1%;
@@ -573,8 +608,10 @@ footer{
 	display: none;
 }
 .drawer{
-	padding: 40px;
+	padding: 10%;
 	margin: 0 auto;
+	width: 80%;
+	height: 90%;
 	background-color: white;
 	color: white;
 	position: absolute;
@@ -585,7 +622,6 @@ footer{
 	font-size: 30px;
 	line-height: 60px;
 	width: 100%;
-	margin: 5%;
 	padding: 5%;
 	display: table;
 	transition: background-color 0.5s ease;
