--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ footer{
 }
 .wrapper-project{
 	width: 100%;
-	padding: 30px 0;
+	padding: 5% 0;
 	margin: 0 auto;
 }
 .art{
@@ -446,7 +446,6 @@ video{
 .col-one{
 	float: left;
 	width: 100%;
-	margin: 0 5%;
 	position: relative;
 }
 .col-two{
@@ -536,326 +535,23 @@ video{
   padding: 0;
 }
 
-/*mobile*/
-/******************************************************/
-/******************************************************/
-/******************************************************/
-@media screen and (max-width: 650px) {
-header{
-    padding: 2%;
-    clear: left;
-    text-align: center;
-	height: 5.5%;
-	width: 96%;
-	position: fixed;
-	z-index: 98;
-}
-nav{
-	text-align: center;
-	padding-bottom: 2%;
-    background-color: red;
-	height: 50%;
-	display: none;   
-}
-article{
-	position: relative;
-	padding: 2% 6%;
-	top: 11%;
-}
-footer{
-    padding: 5%;
-    clear: left;
-    text-align: center;
-	font-size: 19px;
-	color: gray;
-}
-.intro{
-	text-align: center;
-	padding: 20% 5% 0% 5%;
-}
-.artwork{
-	text-align: center;
-	padding: 0% 5%;
-}
-#avatar{
-	width: 60%;
-	padding: 10% 20%;
-}
-.drawer-toggle{ 
-	cursor: pointer;
-	display: block; 
-	position: absolute; 
-	height: 56px; 
-	width: 30px; 
-	right: 6%;
-	top: 6%; 
-}
-.close{
-	position: fixed;
-	cursor: pointer;
-	z-index: 110;
-	width: 45px;
-	height: 45px;
-	font-size: 45px;
-	line-height: 45px;
-	text-align: center;
-	float: right;
-	top: 0;
-	right: 0;
-	color: white;
-	background-color: gray;
-}
-.logo{
-	height: 97%;
-	float: left;
-	left: 2%;
-	top: 1%;
-	position: absolute;
-}
-/* Icon 3 */
-.nav-icon{
-  width: 35px;
-  height: 45px;
-  position: fixed;
-  top: 15px;
-  right: 15px;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
-  z-index: 99;
-}
-
-.nav-icon span{
-  display: block;
-  position: absolute;
-  height: 4px;
-  width: 100%;
-  background: gray;
-  border-radius: 9px;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
-}
-/* Icon 3 */
-
-.nav-icon span:nth-child(1) {
-  top: 0px;
-}
-
-.nav-icon span:nth-child(2),.nav-icon span:nth-child(3) {
-  top: 10px;
-}
-
-.nav-icon span:nth-child(4) {
-  top: 20px;
-}
-
-.nav-icon.open span:nth-child(1) {
-  top: 18px;
-  width: 0%;
-  left: 50%;
-}
-.nav-icon.open span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.nav-icon.open span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-.nav-icon.open span:nth-child(4) {
-  top: 18px;
-  width: 0%;
-  left: 50%;
-}
-#portfolio {  
-    margin: 2% 0;
-    -webkit-column-count: 2; 
-    -moz-column-count: 2;
-    column-count: 2;
-    -webkit-column-gap: 2%;
-    -moz-column-gap: 2%;
-    column-gap: 2%;
-    -webkit-column-width: 33.33333333333333%;
-    -moz-column-width: 33.33333333333333%;
-    column-width: 33.33333333333333%;
-}
-.a_nav{
-	display: none;
-}
-.drawer{
-	padding: 10%;
-	margin: 0 auto;
-	width: 80%;
-	height: 90%;
-	background-color: white;
-	color: white;
-	position: fixed;
-}
-
-.drawer_btn_nav{
-	color: white;
-	font-size: 30px;
-	line-height: 60px;
-	width: 100%;
-	padding: 5%;
-	display: table;
-	transition: background-color 0.5s ease;
-	text-decoration: none;
-}
-.drawer_btn_nav:hover{
-	color: #FF6C00;
-	background-color: rgba(255, 255, 255, 0.6);
-}
-.banner-img{
-	float: left;
-	display: block;
-	width: 96%;
-	padding: 2%;
-}
-#about_text,#skill{
-	margin: 1.5%;
-	width: 97%;
-	float: left;
-}
-.project{
-	cursor: pointer;
-	width: 90%;
-	float: left;
-	position: relative;
-	margin: 1.5% auto;
-	padding: 3%;
-	display: block;
-	transition: all .2s ease-in-out;
-}
-.responsive {
-    width: 49.99999%;
-    margin: 6px 0;
-}
-.project-small{
-	cursor: pointer;
-	width: 100%;
-	display: table;
-	margin: 6% 0% auto;
-	float: left;
-	position: relative;
-	padding: 1%;
-	box-shadow: 10px 10px 50px grey; 
-	background-color: rgba(248, 157, 70, 0.2);
-	transition: all .2s ease-in-out;
-}
-.project-content{
-	display: none;
-	vertical-align: top;
-	z-index: 100;
-	background-color: rgba(255, 255, 255, 0.98);
-	height: 92%;
-	padding: 5%;
-	margin: 2% 2% auto;
-	position: fixed;
-	top: 0;
-	left: 0;
-	overflow: scroll;
-}
-.project-description{
-	width: 50%
-}
-.row{
-	width: 100%;
-	margin: 1% auto;
-	float: left;
-	padding: 0 1%;	
-}
-.row-index{
-	width: 92%;
-	float: left;
-	text-align: left;
-	padding: 4%;
-}
-.row-project{
-	width: 92%;
-	float: left;
-	text-align: left;
-	padding: 4%;
-}
-.pcol{
-	width: 100%;
-	float: left;
-	text-align: left;
-}
-.pcol-img{
-	width: 100%;
-	float: left;
-	text-align: left;
-	margin: 1%;
-}
-.col-two{
-	width: 100%;
-}
-.wrapper-index{
-	width: 100%;
-	padding: 35px 0;
-	margin: 0 auto;
-}
-.wrapper-project{
-	width: 90%;
-	padding: 35px 0;
-	margin: 0 auto;
-}
-.traits{
-	float: left;
-    width: 80%;
-    height: 18%;
-    margin: 5%;
-    position: relative;
-	padding: 5%;
-	text-align: center;
-	box-shadow: 10px 10px 50px grey; 
-    border-radius: 15px;
-    background-color: rgba(248, 157, 70, 0.2);;
-}
-img.img-column-two{
-	width: 40%;
-}
-}
-
-@media only screen and (max-width: 700px){
-    .responsive {
-        width: 49.99999%;
-        margin: 6px 0;
-    }
-}
-
-@media only screen and (max-width: 500px){
-    .responsive {
-        width: 100%;
-    }
-}
 
 .clearfix:after {
     content: "";
     display: table;
     clear: both;
 }
+.loader{
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	padding-top: 25%;
+	z-index: 120;
+	margin: auto;
+	text-align: center;
+	background-color:rgba(255, 255, 255); 
+}
+
 
 
 
