--- a/style.css
+++ b/style.css
@@ -549,7 +549,7 @@ video{
 	z-index: 120;
 	margin: auto;
 	text-align: center;
-	background-color:rgba(255, 255, 255); 
+	background-color:white; 
 }
 
 
