--- a/style-mobile.css
+++ b/style-mobile.css
@@ -259,7 +259,7 @@ footer{
 	text-align: left;
 	padding: 4%;
 }
-.pcol{
+/*.pcol{
 	width: 100%;
 	float: left;
 	text-align: left;
@@ -269,9 +269,18 @@ footer{
 	float: left;
 	text-align: left;
 	margin: 1%;
-}
+}*/
 .col-two{
-	width: 100%;
+    float: left;
+    width: 90%;
+    margin: 0 5%;
+    position: relative;
+}
+.col-three{
+    float: left;
+    width: 90%;
+    margin: 0 5%;
+    position: relative;
 }
 .wrapper-index{
 	width: 100%;
@@ -295,8 +304,19 @@ footer{
     border-radius: 15px;
     background-color: rgba(248, 157, 70, 0.2);;
 }
-img.img-column-two{
-	width: 40%;
+.seemore{
+	text-align: center;
+	float: left;
+	width: 60%;
+	padding: 5% 20%;
+	height: 5%;
+	margin: 10% 0 0 0;
+	background-color: #FFDEAD;
+}
+.hcenter{
+	margin-top: 3%;
+}
+img.img-col-two{ 
 }
 }
 
